# ray-tracing

./: .gitignore  Cargo.toml
src/: geometry.rs  main.rs  ray_tracing.rs
src/ray_tracing/: scene.rs
src/ray_tracing/scene/: camera.rs  material.rs  object.rs
