[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
rand = "0.8.2"
rayon = "1.5.0"
